<resources>
    <!--Logistics-->
    <string name="app_name">RoadTip</string>
    <string name="title_activity_main_screen">RoadTip</string>

    <!--Search Box-->
    <string name="use_place_picker">Use Place Picker</string>

    <!--Push Notifs-->
    <string name="notif_msg">We found a restaurant you might be interested in</string>

    <!--Map-->
    <string name="popup_navigate">Find Direction</string>
    <string name="dst_marker_title">Destination</string>

    <!--SharedPreferences-->
    <string name="can_access_location">HasMapPermission</string>
    <string name="json_returned">JSONReturned</string>
    <string name="background_running">BackgroundRunning</string>

    <!--Dialog, Toast, SnackBar-->
    <string name="GPS_unavail">GPS service unavailable</string>
    <string name="permission_title">Permission Denied</string>
    <string name="permission_message">RoadTip needs location permission to provide better suggestions.</string>
    <string name="positive_button">Got it!</string>
    <string name="problem_url">Problem generating request</string>
    <string name="problem_stream">Error reading response</string>
    <string name="dialog_loading">Loading…</string>
    <string name="loading_msg">Retrieving suggestions for you…</string>

    <!--Preferences/Settings-->
    <string name="cat_general">General</string>
    <string name="cat_suggestions">Suggestions</string>
    <string name="cat_sponsor">Sponsor</string>
    <string name="pref_theme">Colour Theme</string>
    <string name="pref_detours">Detours</string>
    <string name="pref_trip_advisor">TripAdvisor</string>
    <string name="pref_give_suggestions">Give Suggestions</string>
    <string name="pref_send_push">Receive notification</string>

    <!--Navigation Drawer-->
    <string name="nav_gps_avail">GPS Available</string>
    <string name="nav_gps_unavail">GPS Unavailable</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_title_map_types">Map Type</string>
    <string name="nav_title_commu">Communication</string>
    <string name="nav_title_suggestion">Suggestion</string>
    <string name="map_normal">Normal</string>
    <string name="map_terrain">Terrain</string>
    <string name="map_satellite">Satellite</string>
    <string name="map_hybrid">Hybrid</string>
    <string name="nearby_suggestion">Nearby</string>
    <string name="go_webpage">Website</string>

    <!--Color Themes-->
    <string name="theme_green">Green</string>
    <string name="theme_blue">Blue</string>
    <string name="theme_yellow">Yellow</string>
    <string name="theme_red">Red</string>
    <string name="theme_black">Dark</string>

    <!--API Keys-->
    <string name="trip_advisor_key">f0aa9402-a45c-4e90-86b2-acaab8076bc3</string>

    <!--Service Availability Dialog-->
    <string name="svcs_unavail">One or more Google Service Components unavailable, you might not be able to use the geolocation for the reminders</string>
    <string name="svcs_cancel">Connection to Google Play Service is cancelled</string>
    <string name="svcs_acct_invalid">Your Google Account is invalid</string>
    <string name="svcs_missing">Google Play Service is missing on your device, this might result in the unavailability of geolocation function for reminders</string>
    <string name="svcs_updating">Google Play Service on this device is currently updating, please try later</string>
    <string name="svcs_disabled">Google Play Service on this device is disabled, please enable Google map function</string>
    <string name="svcs_signin">Please sign in to Google Play Service before using geolocation function</string>
    <string name="svcs_req_update">Google Play Service version is too old</string>
    <string name="svcs_other">Ran into some problems when initialising Google Play Service</string>
    <string name="svcs_repairable">Please fix your Google Service configuration</string>
    <string name="svcs_broken">Cannot find Google Service</string>

</resources>
